Refactor openapi.yml and the sql schema; Add new chatbot_webhooks table and CRUD methods
