# docs/openapi.yml
@@ -133,24 +133,131 @@ paths:
         "401": { $ref: "#/components/responses/Unauthorized" }
         "404": { $ref: "#/components/responses/NotFound" }
 
-  # -------------------------------- Users
-  /users/me:
+  # -------------------------------- Profile
+  /profile/me:
     get:
-      tags: [Users]
-      summary: Get current user information
-      operationId: getMe
+      tags: [Profile]
+      summary: Get current account information
+      operationId: getProfileMe
       security:
         - bearerAuth: []
       responses:
         "200":
-          description: Current user info
+          description: Current account information
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/UsersMeResponse"
+                $ref: "#/components/schemas/ProfileMeResponse"
         "401": { $ref: "#/components/responses/Unauthorized" }
         "403": { $ref: "#/components/responses/Forbidden" }
         "404": { $ref: "#/components/responses/NotFound" }
+
+  /profile/webhooks:
+    get:
+      tags: [Profile]
+      summary: List current user's webhooks
+      operationId: getProfileWebhooks
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/Offset"
+      responses:
+        "200":
+          description: List of webhooks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Webhook"
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "403": { $ref: "#/components/responses/Forbidden" }
+
+    post:
+      tags: [Profile]
+      summary: Create a new webhook
+      operationId: createProfileWebhook
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Webhook"
+      responses:
+        "201":
+          description: Webhook created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Webhook"
+        "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "403": { $ref: "#/components/responses/Forbidden" }
+
+  /profile/webhooks/{webhookId}:
+    get:
+      tags: [Profile]
+      summary: Get a specific webhook
+      operationId: getProfileWebhook
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/WebhookId"
+      responses:
+        "200":
+          description: Webhook details
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Webhook"
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "403": { $ref: "#/components/responses/Forbidden" }
+        "404": { $ref: "#/components/responses/NotFound" }
+
+    put:
+      tags: [Profile]
+      summary: Update a webhook
+      operationId: updateProfileWebhook
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/WebhookId"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Webhook"
+      responses:
+        "200":
+          description: Webhook updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Webhook"
+        "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "403": { $ref: "#/components/responses/Forbidden" }
+        "404": { $ref: "#/components/responses/NotFound" }
+
+    delete:
+      tags: [Profile]
+      summary: Delete a webhook
+      operationId: deleteProfileWebhook
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/WebhookId"
+      responses:
+        "204":
+          description: Webhook deleted
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "403": { $ref: "#/components/responses/Forbidden" }
+        "404": { $ref: "#/components/responses/NotFound" }
+
 components:
   securitySchemes:
     bearerAuth:
@@ -183,6 +290,16 @@ components:
         type: integer
         minimum: 0
         default: 0
+
+    WebhookId:
+      name: webhookId
+      in: path
+      required: true
+      description: The unique ID of the webhook
+      schema:
+        type: integer
+        format: int64
+        minimum: 1
 
   responses:
     # Ref: https://restfulapi.net/http-status-codes/
@@ -279,17 +396,10 @@ components:
       example: user1@example.com
 
     PhoneNumber:
-      type: object
-      description: Abide by the E.164 standard
-      properties:
-        countryCode:
-          type: string
-          pattern: '^\+\d{1,3}$'
-          example: "+84"
-        number:
-          type: string
-          pattern: '^\d{6,12}$'
-          example: "909234567"
+      type: string
+      description: the phone number of a created account
+      pattern: '^\d{6,15}$'
+      example: "0123456789"
 
     Role:
       type: string
@@ -383,11 +493,30 @@ components:
         accessToken:
           $ref: "#/components/schemas/AccessTokenResponse"
 
-    # -------------------------------- Users
-    UsersMeResponse:
+    # -------------------------------- Profile
+    ProfileMeResponse:
       type: object
       additionalProperties: false
       required: [account]
       properties:
         account:
           $ref: "#/components/schemas/Account"
+
+    Webhook:
+      type: object
+      additionalProperties: false
+      required: [name, url]
+      properties:
+        id:
+          type: integer
+          format: int64
+          minLength: 1
+          maxLength: 26
+          pattern: "^(?=.{5,20}$)(?!.*[_.]{2})[a-zA-Z0-9]+([._]?[a-zA-Z0-9]+)*$"
+          readOnly: true
+          description: Server-generated unique ID
+          example: 42
+        name:
+          type: string
+        url:
+          type: string
